@@ -1,7 +1,7 @@
 {
   "name": "inter-mediator/inter-mediator",
   "version": "6-dev",
-  "time": "2019-02-11",
+  "time": "2019-02-24",
   "repositories": [
     {
       "type": "git",
