@@ -835,18 +835,22 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
                     $signedUser = $this->dbClass->authHandler->authSupportUnifyUsernameAndEmail($this->paramAuthUser);
 
                     $authSucceed = false;
-                    if ($this->checkAuthorization($signedUser, $this->paramResponse, $this->clientId)) {
+                    $ldap = new LDAPAuth();
+                    $ldap->setLogger($this->logger);
+                    if ($this->checkAuthorization($signedUser, $this->paramResponse, $this->clientId, $ldap->isActive)) {
                         $this->logger->setDebugMessage("IM-built-in Authentication succeed.");
                         $authSucceed = true;
                     } else {
-                        $ldap = new \INTERMediator\LDAPAuth();
-                        $ldap->setLogger($this->logger);
                         if ($ldap->isActive) {
                             list($password, $challenge) = $this->decrypting($this->paramCryptResponse);
                             if ($ldap->bindCheck($signedUser, $password)) {
                                 $this->logger->setDebugMessage("LDAP Authentication succeed.");
                                 $authSucceed = true;
                                 $this->addUser($signedUser, $password, true);
+                                if ($this->checkAuthorization($signedUser, $this->paramResponse, $this->clientId, $ldap->isActive)) {
+                                    $this->logger->setDebugMessage("IM-built-in Authentication succeed.");
+                                    $authSucceed = true;
+                                }
                             }
                         }
                     }
@@ -1159,9 +1163,10 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
      * @param $clientId
      * @return string
      */
-    function saveChallenge($username, $challenge, $clientId)
+    function saveChallenge($username, $challenge, $clientId, $isLDAP = false)
     {
-        $this->logger->setDebugMessage("[saveChallenge]user=${username}, challenge={$challenge}, clientid={$clientId}", 2);
+        $this->logger->setDebugMessage(
+            "[saveChallenge]user=${username}, challenge={$challenge}, clientid={$clientId}, isLDAP={$isLDAP}", 2);
         $username = $this->dbClass->authHandler->authSupportUnifyUsernameAndEmail($username);
         $uid = $this->dbClass->authHandler->authSupportGetUserIdFromUsername($username);
         $this->authDbClass->authHandler->authSupportStoreChallenge($uid, $challenge, $clientId);
@@ -1174,7 +1179,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
      * @param $clientId
      * @return bool
      */
-    function checkAuthorization($username, $hashedvalue, $clientId)
+    function checkAuthorization($username, $hashedvalue, $clientId, $isLDAP = false)
     {
         $this->logger->setDebugMessage(
             "[checkAuthorization]user=${username}, paramResponse={$hashedvalue}, clientid={$clientId}", 2);
@@ -1185,7 +1190,10 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
         $signedUser = $this->dbClass->authHandler->authSupportUnifyUsernameAndEmail($username);
         $uid = $this->dbClass->authHandler->authSupportGetUserIdFromUsername($signedUser);
         $this->logger->setDebugMessage("[checkAuthorization]uid={$uid}", 2);
-        if ($uid < 0) {
+        if ($uid <= 0) {
+            return $returnValue;
+        }
+        if ($isLDAP && !$this->dbClass->authHandler->authSupportIsWithinLDAPLimit($uid)) {
             return $returnValue;
         }
         $storedChallenge = $this->authDbClass->authHandler->authSupportRetrieveChallenge($uid, $clientId);
@@ -1233,6 +1241,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
      */
     function checkMediaToken($user, $token)
     {
+        $this->logger->setDebugMessage("[checkMediaToken] user={$user}, token={$token}", 2);
         $returnValue = false;
         $this->authDbClass->authHandler->authSupportRemoveOutdatedChallenges();
         // Database user mode is user_id=0
@@ -1252,10 +1261,12 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
      */
     function addUser($username, $password, $isLDAP = false)
     {
+        $this->logger->setDebugMessage("[addUser] username={$username}, isLDAP={$isLDAP}", 2);
         $salt = $this->generateSalt();
         $hexSalt = bin2hex($salt);
         $returnValue = $this->dbClass->authHandler->authSupportCreateUser(
             $username, sha1($password . $salt) . $hexSalt, $isLDAP, $password);
+        $this->logger->setDebugMessage("[addUser] authSupportCreateUser returns: {$returnValue}", 2);
         return $returnValue;
     }
 
@@ -1361,12 +1372,12 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
             foreach ($tableInfo['validation'] as $entry) {
                 if (array_key_exists($entry['field'], $reqestedFieldValue)) {
                     $this->logger->setDebugMessage("Validation: field={$entry['field']}, rule={$entry['rule']}:", 2);
-                    if($serviceServer->validate($entry['rule'],["value"=>$reqestedFieldValue[$entry['field']]])){
+                    if ($serviceServer->validate($entry['rule'], ["value" => $reqestedFieldValue[$entry['field']]])) {
 
                     }
                 }
             }
-            $this->logger->setDebugMessages($serviceServer->getMessages(),2);
+            $this->logger->setDebugMessages($serviceServer->getMessages(), 2);
             $this->logger->setErrorMessages($serviceServer->getErrors());
             $serviceServer->clearMessages();
             $serviceServer->clearErrors();
